--- a/birth_death.ipynb
+++ b/birth_death.ipynb
@@ -83,8 +83,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "a9ded505-60d7-4773-86de-127898f11607",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K = 5\n",
+    "M = 1000\n",
+    "P = create_transition(p_var, r_var, q_var, N)\n",
+    "\n",
+    "# Theoretical Target\n",
+    "pi = np.array([((i+1)/N)**K - (i/N)**K for i in range(N)])\n",
+    "\n",
+    "for t in range(100):\n",
+    "    P_t = matrix_power(P, t+1)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9207e99a-ff71-4d98-9c5e-a4c441901592",
    "metadata": {},
    "outputs": [],
    "source": []
